# mcp-selenium-grid

./: .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  config.yaml  pyproject.toml  pytest.ini
.github/actions/setup-python-uv/: action.yml
.github/workflows/: 1.2_integration-e2e-tests.yml  1_ci.yml  1_tests.yml  2.1_build-python-package.yml  2.2_build-docker-image.yml  2.3_create-github-release.yml  2_release.yml  3_ci-cd.yaml  README.md  build-docker-image.yml  build-python-package.yml  ci.yml  manual-integration-e2e.yml  release.yml
deployment/helm/selenium-grid/templates/: namespace.yaml
scripts/: check_coverage.py
scripts/helm/: README.md  helpers.py  main.py
scripts/helm/cli/: helm.py
src/app/: dependencies.py  main.py  models.py
src/app/api/: browsers.py
src/app/auth/: oauth.py  token.py
src/app/common/: getenv.py
src/app/core/: env_helpers.py  models.py  settings.py
src/app/routers/: browsers.py  selenium_proxy.py
src/app/routers/browsers/: models.py  routes.py
src/app/services/: local_ai.py  metrics.py
src/app/services/selenium_hub/: __init__.py  _selenium_hub.py  backend.py  docker_backend.py  k8s_backend.py  manager.py  selenium_hub.py
src/app/services/selenium_hub/core/: docker_backend.py  hub_backend.py
src/app/services/selenium_hub/core/kubernetes/: backend.py  k8s_config.py  k8s_models.py  k8s_port_forwarder.py  k8s_resource_manager.py  k8s_url_resolver.py
src/app/services/selenium_hub/core/kubernetes/common/: auth.py
src/app/services/selenium_hub/models/: __init__.py  browser.py  docker_settings.py  general_settings.py  kubernetes_settings.py  selenium_settings.py
src/deployment/docker/: Dockerfile  docker-compose.yml
src/deployment/kubernetes/manifests/: base.yaml
src/tests/: README.md  conftest.py
src/tests/e2e/: test_browser_workflow.py  test_e2e_agent.py  test_live_ai_integration.py  test_selenium_hub.py
src/tests/integration/: test_api_integration.py  test_browsers_api.py  test_health_and_stats.py  test_selenium_proxy.py
src/tests/unit/: test_dependencies.py  test_docker_backend.py  test_k8s_backend.py  test_k8s_components.py  test_selenium_hub.py  test_settings.py
